# seri

./: .gitignore  Cargo.toml  LICENSE  README.md
data/: example.seri  template.html  template_abstex.tex  template_tikz.tex
src/: event.rs  lang.rs  main.rs  passes.rs  templating.rs
src/passes/: abstex.rs  html.rs  latex.rs  latexmk.rs  parser.rs  tikz.rs
