[package]
name = "seri"
version = "0.1.2"
edition = "2021"
authors = ["Lugrim"]
license = "ACSL"
repository = "https://github.com/Lugrim/timetable-language"
description = "A Domain Specific Language Compiler for organising events and exporting details to different formats"
categories = ["command-line-utilities", "compilers", "date-and-time"]
keywords = ["timetable"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
chrono = "0.4.24"

