[package]
name = "seri"
version = "0.1.4"
edition = "2021"
authors = [
	"Lugrim",
	"Camille Le Bon",
	"Amélie Gonzalez",
	"Hugo Reymond",
]
license = "ACSL"
repository = "https://github.com/Lugrim/seri"
description = "A Domain Specific Language Compiler for organising events and exporting details to different formats"
categories = ["command-line-utilities", "compilers", "date-and-time"]
keywords = ["timetable"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.*", features = ["derive"] }
chrono = "0.4.*"
thiserror = "1.0.*"
rand = "0.8.*"
glob = "0.3.*"
regex = "1.8.*"
isolang = { version = "2.*", features = ["serde"] }
